--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -51,6 +51,11 @@
   &__link-number {
     margin-right: 0.5em;
     font-weight: 700;
+    display: none;
+
+    @include utilities.breakpoint('for-desktop-up') {
+      display: inline;
+    }
   }
 }
 
